add comment page, fix paging problem, add router for paging

--- a/src/components/HackerListItem.scss
+++ b/src/components/HackerListItem.scss
@@ -42,11 +42,19 @@
       }
     }
     .news-comments {
+      cursor: pointer;
       display: flex;
       align-items: center;
       flex-direction: row;
       svg {
         padding-right: 0.1rem;
+      }
+      a {
+        color: black;
+        text-decoration: none;
+        &:hover {
+          color: #dee2e6;
+        }
       }
     }
   }
